# catalog.data.gov

./: .cfignore  .env  .env.example  .gitignore  .prettierrc  .profile  .snyk  .yamllint.yml  Dockerfile  Dockerfile.test  Jenkinsfile  Makefile  Pipfile  Procfile  README.md  SYSTEMS.md  apt.yml  cfauth.sh  cfsetup.sh  cfstart.sh  configure-postgis.py  configure-postgis.sql  create-cloudgov-services.sh  docker-compose.test.yml  docker-compose.yml  index.html  maintaince_html.mhtml  manifest.yml  package.json  requirements-freeze.txt  requirements.txt  scan.json  vars.development.yml  vars.prod.yml  vars.production.yml  vars.staging.yml  vars.yml.template  vendor-nginx-modules.sh  vendor-requirements.sh
.circleci/: config.yml
.github/: automated_ckan_error.md  db-solr-sync-info.md  dependabot.yml  deploy-failure.md  egress_check_error.md  pull_request_template.md  report-generation-failure.md  stuck_jobs.md  tracking-update-info.md
.github/workflows/: add_to_project.yml  check-stuck-harvest-jobs-automated.yml  check-stuck-harvest-jobs.yml  ckan.yml  ckan_auto.yml  ckan_harvester.yml  codeql-analysis.yml  commit.yml  db-solr-sync-automated.yml  db-solr-sync.yml  deploy-template.yml  deploy.yml  download-cypress.yml  egress_check.yml  maintenance.yml  publish.yml  restart.yml  run-harvest-check.yml  s3-to-sitemap.yml  scale_web.yml  snyk.yml  tracking-update.yml  vendor-template.yml
Error 404 - CKAN_files/: 166796c8e31344a658086ad12870a35d_uswds.css  472a7f5f837ddfac9b6e5c35b04389dd_googleanalytics_event_tracking.js.download  b59cb59c3a623f14a29edd4803159aa3_datagovtheme.css
apt-test/: .profile  Procfile  README.md  apt.yml  fgdc-csdgm_sample.xml  fgdcrse2iso19115-2.xslt  manifest.yml  prepsaxon.sh  vars.yml-template
cflinuxfs3-fhs-fixup/: Makefile  README.md  cflinuxfs3-fhs-fixup.ctl
ckan/: .snyk  Dockerfile  Pipfile  freeze-requirements.sh  requirements.in  requirements.txt  test-catalog-next.ini  test-catalog-prev.ini
ckan-base/2.8/: Dockerfile
ckan-dev/2.8/: Dockerfile
ckan-dev/setup/: start_ckan_development.sh
ckan/docker-entrypoint.d/: 10-setup-archiver.sh  10-setup-harvest.sh  20-setup-archiver.sh  30-setup-qa.sh  40-saml2.sh  40-setup-saml2.sh
ckan/patches/ckan/: README.md  unflattern_indexerror.patch
ckan/saml2/: idp.xml  who.ini
ckan/saml2/attributemaps/: basic.py
ckan/saml2/pki/: mycert.pem  mykey.pem
ckan/setup/: GSA_prerun.py  cacerts  ckan.ini  ckan_setup.sh  gunicorn.conf.py  harvest-check-cron  login.production.idp.xml  login.sandbox.idp.xml  migrate-solrcloud-schema.sh  newrelic.ini  prerun.py  production.ini  server_start.sh  start_ckan_development.sh  who.ini  wsgi.py
ckan/setup/solr/: managed-schema  solrconfig.xml  solrconfig_follower.xml
ckan28/: .env  .gitignore  Makefile  docker-compose.test.yml  docker-compose.yml  requirements-freeze.txt
ckan28/ckan/: Dockerfile  freeze-requirements.sh  test-catalog-next.ini
ckan28/ckan/docker-entrypoint.d/: 10-setup-harvest.sh  20-setup-archiver.sh  30-setup-qa.sh  40-saml2.sh
ckan28/ckan/setup/: server_start.sh
ckan28/nginx/: key.pem
ckan28/postgresql/: Dockerfile
ckan28/requirements/: pyproject.toml
ckan28/tests/: globals.bash
ckan28/tests/test-data/: test-org-create-01.json
ckan29/: .env  Makefile  docker-compose.yml
ckan29/ckan/: Dockerfile  freeze-requirements.sh  requirements.txt
ckan29/ckan/docker-entrypoint.d/: 10-hello.sh
ckan29/ckan/setup/: start_ckan.sh
ckan29/requirements/: pyproject.toml
ckan29/solr/: Dockerfile  solrconfig.xml
ckan29/tests/: test-base.bats  test-harvest.bats
ckan29/tests/test-data/: test-package-create-01.json  test-package-create-02-public.json
config/: login.sandbox.idp.xml  production.ini  who.ini
docs/: harvesters.md
docs/CloudFront/: README.md
docs/harvesters/: waf-collections.md  waf.md
e2e/: cypress.config.js  cypress.json  package.json
exts/ckanext-catalogdatagov/: .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  test.ini
nginx/: certificate.pem  nginx.conf
postgresql/: Dockerfile
proxy/: .profile  Dockerfile  mime.types  nginx-authy.conf  nginx-badbot403.conf  nginx-basicauth.conf  nginx-botbegone.conf  nginx-cloudfront.conf  nginx-common.conf  nginx-goodbot200.conf  nginx-maintenance.conf  nginx-malicious.conf  nginx-malicious429.conf  nginx.conf
proxy/conf/: test.lua
proxy/modules/: README.md
proxy/public/: 403-gsaip.html  403.html  429.html  500.html  maintenance.html  malicious.html  robots.txt  sitedown.html  template.html
python_test_app/: manifest.yml  requirements.txt  vars.development.yml
requirements/: Pipfile  pyproject.toml
smtp/: service-config.json
solr/: Dockerfile  README.md  fix-follower.sh  infinite.sh  local_setup.sh  migrate-solrcloud-schema.sh  remove_backups.sh  restore_backups.sh  schema.xml  security.json  service-config-development.json  service-config-prod.json  service-config-staging.json  service-config.json  solr  solr_setup.sh  solrconfig.xml  sss.json  start-local-solr
solr/restarts/: app.py
src/: README.md
tests/: globals.bash  helpers.bats  nginx.conf  test-base.bats  test-dataGovTheme.bats  test-datajson.bats  test-dcat.bats  test-harvest.bats  test-version.bats  test.bats  test_helper.bash
tests/harvest-sources/: data.json
tests/test-data/: waf-collection-source.json
tools/: get_recent_tasks.sh  monitor_cf_log.sh  monitor_cf_logs.sh  restart.sh  restart_fetch.sh  restart_gather.sh  restart_harvester.sh  set_maintenance.sh  snyk-update.py
tools/ci-scripts/: .gitignore  circleci-build-catalog-next.bash
tools/data-tests/: README.md  children-check.py  install-in-alpine-container.sh  load_simple_data.py  requirements.txt  solr-test.py  sql-test.py
tools/harvest_source_import/: .gitignore  README.md  check_harvest_sources.py  dev-requirements.txt  import.py  import_groups.py  import_harvest_sources.py  list_harvest_sources.py  requirements.txt
tools/locations-table/: README.md  install-locations-table.sh
tools/sql-tests/: README.md  REDME.md  install-in-alpine-container.sh  requirements.txt  solr-test.py  sql-test.py
(+88 files in other folders)
