[tool.poetry]
name = "ckan-catalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^2.7"

ckan = {tag = "2.8", git = "https://github.com/ckan/ckan.git"}

ckanext-archiver = {git = "https://github.com/ckan/ckanext-archiver.git"}
ckanext-datagovtheme = {git = "https://github.com/GSA/ckanext-datagovtheme.git"}
ckanext-datajson = {git = "https://github.com/GSA/ckanext-datajson.git" }
ckanext-envvars = "*"
ckanext-geodatagov = {git = "https://github.com/GSA/ckanext-geodatagov.git" }
ckanext-harvest = {git = "https://github.com/ckan/ckanext-harvest.git" }
# ckanext-harvest = {git = "https://github.com/GSA/ckanext-harvest.git", branch = "datagov-catalog" }
ckanext-report = {git = "https://github.com/davidread/ckanext-report.git" }
ckanext-spatial = {git = "https://github.com/ckan/ckanext-spatial.git" }
ckanext-datagovcatalog = {git = "https://github.com/GSA/ckanext-datagovcatalog.git"}
ckanext-googleanalyticsbasic = {git = "https://github.com/GSA/ckanext-googleanalyticsbasic.git" }
ckanext-qa = {git = "https://github.com/ckan/ckanext-qa.git" }
ckanext-saml2 = { git = "https://github.com/GSA/ckanext-saml2.git", tag = "datagov-0.4.0-config" }

ckanext-dcat = {git="https://github.com/ckan/ckanext-dcat" }
# If you try to add and extension and it didn't work you should try `chown user:user -R .` because if you run docker as superuser and the as a regular user won't be able to add the folder for the new extension


# ckanext-harvest dependencies

cffi = "1.12.3"
ckantoolkit = "0.0.3"
cryptography = "2.7"
pika = ">=1.1.0"
pyOpenSSL = "18.0.0"
redis = "2.10.6"
urllib3 = "1.25.9"

# ckanext-datagovtheme

Genshi = "0.7.3"

# ckanext-datajson

pyyaml = "*"
lepl = "*"
jsonschema = "2.4.0"
rfc3987 = "*"

# ckanext-archiver

celery = "3.1.25"
kombu = "3.0.37"
progressbar = "2.3"

# ckanext-geodatagov

# Unfortunately, this code is 17 years old, and poetry isn't able to
# determine the version number.
# PyZ3950 = {git = "https://github.com/asl2/PyZ3950.git" }
# pip equivalent:
# pip install -e git+https://github.com/asl2/PyZ3950.git@c2282c73182cef2beca0f65b1eb7699c9b24512e#egg=PyZ3950

ply = "3.4"
boto = "*"
# required to boto plugin to upload to S3 in some internal commands
google_compute_engine = "2.8.13"

# ckanext-spatial

GeoAlchemy = ">=0.6"
GeoAlchemy2 = "0.5.0"
Shapely = ">=1.2.13"
OWSLib = "0.8.6"
lxml = ">=2.3"
argparse = "*"
pyparsing = ">=2.1.10"

# ckanext-qa
xlrd = ">=1.0.0"
messytables = ">=0.15.2"

#ckanext-dcat

rdflib= "4.2.1"
rdflib-jsonld = "0.4.0"
geomet = ">=0.2.0"
future = ">=0.18.2"
six = ">=1.15.0"
# ckanext-pysaml2
pysaml2 = {git = "https://github.com/GSA/pysaml2.git", branch = "feature/ci-login-gov" }

# ckan doesn't advertise its requirements correctly, so let's add them
# here.

bleach = "~3.1.1"
click = "6.7"
fanstatic = "0.12"
ofs = "0.4.2"
passlib = "1.7.3"
polib = "1.0.7"
psycopg2 = "2.7.3.2"
python-magic = "0.4.15"
pysolr = "3.6.0"
python-dateutil = "<2.0.0,>=1.5.0"
pytz = "2016.7"
requests = "2.22.0"
rq = "0.6.0"
simplejson = "3.10.0"
sqlalchemy-migrate = "0.10.0"
sqlparse = "0.2.2"
tzlocal = "1.3"
unicodecsv = ">=0.9"
vdm = "0.14"
Babel = "2.3.4"
Flask = "0.12.4"
Flask-Babel = "0.11.2"
Jinja2 = "~2.10.1"
Markdown = "~3.1"
Pairtree = "0.7.1-T"
Paste = "1.7.5.1"
PasteScript = "2.0.2"
Pylons = "0.9.7"
"pyutilib.component.core" = "4.6.4"
"repoze.who-friendlyform" = "1.0.8"
"repoze.who" = "2.3"
Routes = "1.13"
SQLAlchemy = "1.1.11"
WebHelpers = "1.3"
WebOb = "1.0.8"
WebTest = "1.4.3"
werkzeug = "~0.15.3"
"zope.interface" = "4.3.2"

# we are running under gunicorn
# Pinned greenlet version to match version delivered with OS,
# preventing error with gevent dependency using newer version.

gunicorn = "*"
gevent = "*"
greenlet = "0.4.12"

# New Relic
newrelic = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
