[tool.poetry]
name = "ckan-catalog"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"

ckan = {tag = "ckan-2.9.3", git = "https://github.com/ckan/ckan.git"}

# ckanext-archiver = {git = "https://github.com/ckan/ckanext-archiver.git"}
# ckanext-datagovtheme = {git = "https://github.com/GSA/ckanext-datagovtheme.git", branch = "main" }
# ckanext-datajson = {git = "https://github.com/GSA/ckanext-datajson.git", branch = "main" }
ckanext-envvars = {git = "https://github.com/GSA/ckanext-envvars.git", branch = "main" }
# ckanext-geodatagov = {git = "https://github.com/GSA/ckanext-geodatagov.git", branch = "main" }
ckanext-harvest = {git = "https://github.com/ckan/ckanext-harvest.git" }
# ckanext-harvest = {git = "https://github.com/GSA/ckanext-harvest.git", branch = "datagov-catalog" }
# ckanext-report = {git = "https://github.com/davidread/ckanext-report.git" }
# ckanext-spatial = {git = "https://github.com/ckan/ckanext-spatial.git" }
# ckanext-datagovcatalog = {git = "https://github.com/GSA/ckanext-datagovcatalog.git"}
# ckanext-googleanalyticsbasic = {git = "https://github.com/GSA/ckanext-googleanalyticsbasic.git" }
# ckanext-qa = {git = "https://github.com/ckan/ckanext-qa.git" }
# ckanext-saml2auth = { git = "https://github.com/keitaroinc/ckanext-saml2auth.git", tag = "ckan-2.8" }
# ckanext-dcat = {git="https://github.com/ckan/ckanext-dcat" }
# webob = {git = "https://github.com/GSA/webob.git", branch = "ckan-patch" }
# pygments = {git = "https://github.com/GSA/pygments.git", branch = "datagov/v2.2.x" }
# If you try to add and extension and it didn't work you should try `chown user:user -R .` because if you run docker as superuser and the as a regular user won't be able to add the folder for the new extension


# ckanext-harvest dependencies

cffi = "1.12.3"
ckantoolkit = "0.0.3"
# cryptography = "3.3.2"
pika = ">=1.1.0"
pyOpenSSL = "20.0.1"
# redis = "2.10.6" # included in ckan core
urllib3 = "1.25.9"

# ckanext-datagovtheme

Genshi = "0.7.3"

# ckanext-datajson

# pyyaml = "5.4" # Already included in ckan requirements
lepl = "*"
jsonschema = "2.4.0"
rfc3987 = "*"

# ckanext-archiver

# celery = "3.1.25"
# kombu = "3.0.37"
# progressbar = "2.3"

# ckanext-geodatagov

# Unfortunately, this code is 17 years old, and poetry isn't able to
# determine the version number.
# PyZ3950 = {git = "https://github.com/asl2/PyZ3950.git" }
# pip equivalent:
# pip install -e git+https://github.com/asl2/PyZ3950.git@c2282c73182cef2beca0f65b1eb7699c9b24512e#egg=PyZ3950

ply = "3.4"
boto = "*"
# required to boto plugin to upload to S3 in some internal commands
google_compute_engine = "2.8.13"

# ckanext-spatial

# GeoAlchemy = ">=0.6"
# GeoAlchemy2 = "0.5.0"
# Shapely = ">=1.2.13"
# OWSLib = "0.8.6"
# lxml = ">=2.3"
# argparse = "*"
# pyparsing = ">=2.1.10"

#ckanext-qa
xlrd = ">=1.0.0"
messytables = ">=0.15.2"

#ckanext-dcat

rdflib= "4.2.1"
rdflib-jsonld = "0.4.0"
geomet = ">=0.2.0"
future = ">=0.18.2"
six = ">=1.15.0"

# ckanext-pysaml2
# Using a patched 4.9 version due to a security issue: https://github.com/GSA/datagov-ckan-multi/issues/544
pysaml2 = { git = "https://github.com/GSA/pysaml2.git", tag = "datagov/v4.9.0" }

# to backport saml2auth to CKAN 2.8 and python2
python2-secrets = "1.0.5"

# ckan doesn't advertise its requirements correctly, so let's add them
# here.
alembic = "1.0.0"
Babel = "2.7.0"
Beaker = "1.11.0"
bleach = "3.3.0"
click = "7.1.2"
dominate = "2.4.0"
fanstatic = "1.1"
feedgen = "0.9.0"
Flask = "1.1.1"
Flask-Babel = "1.0.0"
flask-multistatic = "1.0"
Jinja2 = "2.11.3"
PyJWT = "1.7.1"
Markdown = "2.6.7"
passlib = "1.7.3"
pastedeploy = "2.0.1"        # manually kept - remove when #4802 is complete
pathtools = "0.1.2"          # via watchdog
polib = "1.0.7"
psycopg2 = "2.8.2"
python-magic = "0.4.15"
pysolr = "3.6.0"
python-dateutil = ">=1.5.0"
pytz = "2016.7"
PyUtilib = "5.7.1"
pyyaml = "5.4"
# repoze.who = "2.3"
requests = "2.25.0"
Routes = "1.13"
rq = "1.0"
simplejson = "3.10.0"
sqlalchemy-migrate = "0.12.0"
SQLAlchemy = "1.3.5"
sqlparse = "0.2.2"
tzlocal = "1.3"
unicodecsv = ">=0.9"
webassets = "0.12.1"
Werkzeug = "1.0.0"
# zope.interface = "4.7.2"

# we are running under gunicorn
# Pinned greenlet version to match version delivered with OS,
# preventing error with gevent dependency using newer version.

gunicorn = "*"
gevent = ">=21.8.0"
# greenlet = "0.4.12"

# New Relic
newrelic = "<6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
